--- a/my app/app/src/main/res/layout/activity_packages.xml
+++ b/my app/app/src/main/res/layout/activity_packages.xml
@@ -21,7 +21,11 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:src="@drawable/backgroundw" />
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp" />
 
         <TextView
             android:id="@+id/textView3"
@@ -32,8 +36,8 @@
             android:layout_alignRight="@+id/imageView3"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:text="Services Offered During Package:"
             android:layout_marginTop="0dp"
-            android:text="IT'S THE TIME TO CHOOSE THAT DIRECTION. . ."
             android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -73,7 +77,7 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="113dp"
+            android:layout_width="198dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
@@ -83,8 +87,8 @@
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="446dp"
-            android:layout_marginEnd="299dp"
-            android:layout_marginRight="299dp"
+            android:layout_marginEnd="213dp"
+            android:layout_marginRight="213dp"
             android:text="OUR RATE :"
             android:textColor="#fff"
             android:textSize="14sp" />
@@ -128,7 +132,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="-221dp"
             android:layout_marginLeft="-221dp"
-            android:layout_marginTop="490dp"
+            android:layout_marginTop="480dp"
             android:layout_toEndOf="@+id/textView6"
             android:layout_toRightOf="@+id/textView6"
             android:text="4 Nights and 5 Days"
@@ -155,17 +159,17 @@
 
         <TextView
             android:id="@+id/mItenary"
-            android:layout_width="409dp"
-            android:layout_height="120dp"
-            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="181dp"
+            android:layout_below="@+id/textView8"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="547dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginBottom="64dp"
-            android:text="Landour is a quaint little town in Uttarakhand best known for being the home to the famous author Ruskin Bond. The town is blessed with a pleasant climate throughout the year owing to the mountains that envelope the little town. The town also has some British era churches like the Kellogg’s Church, St.Paul and the Methodist church that you must visit. The town also offers some popular trekking routes that will take you through the beautiful valleys of Uttarakhand. "
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="3dp"
+            android:text="ust visit. The town also offers some popular trekking routes that will take you through the beautiful valleys of Uttarakhand. "
             android:textColor="#fff"
             android:textSize="14sp" />
 
@@ -178,13 +182,83 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="172dp"
-            android:layout_marginLeft="172dp"
-            android:layout_marginEnd="139dp"
-            android:layout_marginRight="139dp"
-            android:layout_marginBottom="1dp"
+            android:layout_marginStart="162dp"
+            android:layout_marginLeft="162dp"
+            android:layout_marginEnd="149dp"
+            android:layout_marginRight="149dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/shit"
             android:text="BUY" />
+
+        <ImageView
+            android:id="@+id/imageButton5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textView3"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="363dp"
+            android:layout_marginRight="363dp"
+            app:srcCompat="@drawable/ic_room_service_black_24dp"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/imageButton6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="56dp"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="307dp"
+            android:layout_marginRight="307dp"
+            app:srcCompat="@drawable/ic_wifi_black_24dp"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/imageButton7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView3"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="115dp"
+            android:layout_marginLeft="115dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="248dp"
+            android:layout_marginRight="248dp"
+            app:srcCompat="@drawable/ic_airport_shuttle_black_24dp"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/imageView3"
+            android:layout_alignLeft="@+id/imageView3"
+            android:layout_alignBottom="@+id/mBuy"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="351dp"
+            android:layout_marginLeft="351dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="663dp"
+            app:srcCompat="@drawable/ic_thumb_up_black_24dp"
+            tools:ignore="VectorDrawableCompat" />
 
 
     </RelativeLayout>
