--- a/my app/app/src/main/res/layout/activity_packages.xml
+++ b/my app/app/src/main/res/layout/activity_packages.xml
@@ -247,18 +247,31 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/imageView3"
             android:layout_alignLeft="@+id/imageView3"
-            android:layout_alignBottom="@+id/mBuy"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="351dp"
-            android:layout_marginLeft="351dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="663dp"
+            android:layout_marginStart="361dp"
+            android:layout_marginLeft="361dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
             app:srcCompat="@drawable/ic_thumb_up_black_24dp"
             tools:ignore="VectorDrawableCompat" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/imageView3"
+            android:layout_alignRight="@+id/imageView3"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="304dp"
+            android:layout_marginLeft="304dp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginRight="49dp"
+            android:layout_marginBottom="610dp" />
 
 
     </RelativeLayout>
