--- a/my app/app/src/main/res/layout/fragment_villages.xml
+++ b/my app/app/src/main/res/layout/fragment_villages.xml
@@ -78,5 +78,25 @@
 
             android:paddingVertical="15sp"
             />
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nako"
+            android:textSize="25sp"
+            android:textAlignment="center"
+
+            android:paddingVertical="15sp"
+            />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Kila raipur"
+            android:textSize="25sp"
+            android:textAlignment="center"
+
+            android:paddingVertical="15sp"
+            />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
