added setting xml in my account page

--- a/my app/app/src/main/res/layout/fragment_myaccount.xml
+++ b/my app/app/src/main/res/layout/fragment_myaccount.xml
@@ -25,7 +25,7 @@
             android:id="@+id/favourites"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="favourites" />
+            android:text="Wishlist" />
 
         <Button
             android:id="@+id/faq"
