--- a/my app/app/src/main/res/layout/activity_rural__traveller.xml
+++ b/my app/app/src/main/res/layout/activity_rural__traveller.xml
@@ -3,167 +3,139 @@
     android:layout_width="match_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android" >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/bc"
-    tools:context=".Rural_Traveller">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@drawable/bc"
+        tools:context=".Rural_Traveller">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
-    <ScrollView
-        android:id="@+id/login_form"
-        android:layout_width="390dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <LinearLayout
-            android:id="@+id/email_login_form"
-            android:layout_width="match_parent"
+        <!-- Login progress -->
+        <ProgressBar
+            android:id="@+id/login_progress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="visible">
+            android:layout_marginBottom="8dp"
+            android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="383dp"
-                android:layout_height="98dp"
-                app:srcCompat="@mipmap/ic_launcher" />
+        <ScrollView
+            android:id="@+id/login_form"
+            android:layout_width="390dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
+                android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <AutoCompleteTextView
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autofillHints=""
-                    android:hint="Password"
-                    android:imeActionId="6"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:selectAllOnFocus="false"
-                    android:singleLine="true"
-                    android:visibility="visible" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <Button
-                android:id="@+id/email_sign_in_button"
-                style="@android:style/Widget.Holo.Button"
-                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="60dp"
-                android:background="@drawable/shit"
-                android:text="@string/action_sign_in_short" />
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="383dp"
+                    android:layout_height="98dp"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        android:hint="@string/prompt_email"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints=""
+                        android:hint="Password"
+                        android:imeActionId="6"
+                        android:imeActionLabel="@string/action_sign_in_short"
+                        android:imeOptions="actionUnspecified"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:selectAllOnFocus="false"
+                        android:singleLine="true"
+                        android:visibility="visible" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/email_sign_in_button"
+                    style="@android:style/Widget.Holo.Button"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="60dp"
+                    android:background="@drawable/shit"
+                    android:text="@string/action_sign_in_short" />
+
+                <Button
+                    android:id="@+id/button7"
+                    style="@android:style/Widget.Holo.Button.Borderless.Small"
+                    android:layout_width="250dp"
+                    android:layout_height="37dp"
+                    android:text="Forgot Password"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="#fff"
+                    tools:layout_editor_absoluteX="124dp"
+                    tools:layout_editor_absoluteY="30dp" />
+
+
+
+
+            </LinearLayout>
+        </ScrollView>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="411dp"
+            android:layout_height="296dp">
+
 
             <Button
-                android:id="@+id/button7"
-                style="@android:style/Widget.Holo.Button.Borderless.Small"
-                android:layout_width="250dp"
-                android:layout_height="37dp"
-                android:text="Forgot Password"
-                android:layout_marginLeft="60dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:textColor="#fff"
-                tools:layout_editor_absoluteX="124dp"
-                tools:layout_editor_absoluteY="30dp" />
+                android:id="@+id/button3"
+                style="@android:style/Widget.Holo.Button.Borderless"
+                android:layout_width="85dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="163dp"
+                android:layout_marginLeft="163dp"
+                android:layout_marginEnd="163dp"
+                android:layout_marginRight="163dp"
+                android:layout_marginBottom="32dp"
+                android:text="Admin"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button" />
 
-            <Button
-                android:id="@+id/button8"
-                style="@android:style/Widget.Holo.Button"
-                android:layout_width="250dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="60dp"
-                android:text="New Here? SIGN UP"
-                android:background="@drawable/shit"/>
+        </android.support.constraint.ConstraintLayout>
 
 
-        </LinearLayout>
-    </ScrollView>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="411dp"
-        android:layout_height="296dp">
-
-        <Button
-            android:id="@+id/button"
-            style="@android:style/Widget.Holo.Light.Button"
-            android:layout_width="123dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="35dp"
-            android:background="@drawable/shit1"
-            android:text="Travel Guide?"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            app:layout_constraintBottom_toTopOf="@+id/button3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.533"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <Button
-            android:id="@+id/button3"
-            style="@android:style/Widget.Holo.Light.Button"
-            android:layout_width="85dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="163dp"
-            android:layout_marginLeft="163dp"
-            android:layout_marginEnd="163dp"
-            android:layout_marginRight="163dp"
-            android:layout_marginBottom="100dp"
-            android:background="@drawable/shit1"
-            android:text="Admin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
-
-    </android.support.constraint.ConstraintLayout>
-
-
-</LinearLayout>
+    </LinearLayout>
 </ScrollView>
