--- a/my app/app/src/main/res/layout/activity_myaccount_setting.xml
+++ b/my app/app/src/main/res/layout/activity_myaccount_setting.xml
@@ -16,7 +16,7 @@
 
 
         <Button
-            android:id="@+id/settings_changepassword"
+            android:id="@+id/changepass"
             android:layout_width="301dp"
             android:layout_height="39dp"
             android:background="@drawable/shit"
@@ -25,7 +25,7 @@
             tools:layout_editor_absoluteY="289dp" />
 
         <Button
-            android:id="@+id/settings_logout"
+            android:id="@+id/logout"
             android:layout_width="303dp"
             android:layout_height="43dp"
             android:background="@drawable/shit"
