--- a/my app/app/src/main/res/layout/activity_tgdata_for_admin.xml
+++ b/my app/app/src/main/res/layout/activity_tgdata_for_admin.xml
@@ -2,6 +2,7 @@
 <ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fillViewport="true"
+    android:background="@drawable/dark"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,9 +14,12 @@
 
     <TextView
         android:id="@+id/textView21"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:paddingTop="10sp"
+        android:paddingBottom="10sp"
+        android:gravity="center"
+        android:background="#333"
         android:text="Travel Guide data"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -256,6 +260,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="#333"
+            android:layout_marginRight="2sp"
+            android:layout_marginLeft="2sp"
             android:text="Accept" />
 
         <Button
@@ -263,6 +270,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginLeft="2sp"
+            android:layout_marginRight="2sp"
+            android:background="#333"
             android:text="Reject" />
     </LinearLayout>
 
