--- a/my app/app/src/main/res/layout/activity_userdash.xml
+++ b/my app/app/src/main/res/layout/activity_userdash.xml
@@ -6,88 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Home"
     android:background="@drawable/dark">
-
-    <LinearLayout
-        android:id="@+id/ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="395dp"
-            android:layout_height="66dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@mipmap/ic_launcher_round" />
-
-
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Rural Traveller"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5sp"
-            android:text="Custom Search" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/search_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="13"
-                android:ems="10"
-                android:hint="Search Village name Here"
-                android:inputType="textPersonName" />
-
-            <ImageButton
-                android:id="@+id/search_but"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                app:srcCompat="@android:drawable/ic_menu_search" />
-
-
-        </LinearLayout>
-
-        <include
-            layout="@layout/userdb_tab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="213dp" />
-
-    </LinearLayout>
-
     <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
+        android:id="@+id/pager_container1"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="200dp"
-        app:layout_constraintTop_toBottomOf="@id/ll">
-
-    </android.support.v4.view.ViewPager>
+        android:layout_height="match_parent"/>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/bottom_navigation1"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom"
+        android:background="#aaa"
+        app:tabIndicatorHeight="6dp"
+        app:itemIconTint="#FFFF"
+        app:tabIndicatorColor="#f00"
+        app:itemTextColor="#FFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
