--- a/my app/app/src/main/res/layout/activity_userdash.xml
+++ b/my app/app/src/main/res/layout/activity_userdash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Home"
-    android:background="@drawable/dark">
+    android:background="#08b">
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_container1"
         android:layout_width="match_parent"
