--- a/my app/app/src/main/res/layout/mylist.xml
+++ b/my app/app/src/main/res/layout/mylist.xml
@@ -10,7 +10,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/list_style"
         android:layout_marginLeft="2sp"
         android:layout_marginRight="2sp"
@@ -27,17 +27,17 @@
         <TextView
             android:id="@+id/Tname"
             android:layout_width="0sp"
-            android:layout_height="0sp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textColor="#858080"
-            android:text="kjadldas maa kaa bsda"
+            android:text="kjadldas maa kaa bsda ljdflkjfsafjfjdjfasklfjslfjadfjfjsaldfjl;fjafk;ljasdlkjfslafjljdsjlfjaslfjsalfjsal;fjdjflajf"
             android:gravity="center_vertical"
             android:textSize="17sp"
             android:textStyle="bold"
             android:layout_marginLeft="10sp"
             app:layout_constraintStart_toEndOf="@id/Design_image"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/Tap"
+            app:layout_constraintBottom_toTopOf="@id/Tap"
             app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
             android:id="@+id/Tap"
