--- a/my app/app/src/main/res/layout/activity_visit_review.xml
+++ b/my app/app/src/main/res/layout/activity_visit_review.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,7 +13,7 @@
         tools:context=".grate">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/VisitImage"
             android:layout_width="match_parent"
             android:layout_height="414dp"
             android:layout_alignParentStart="true"
@@ -30,7 +29,7 @@
             android:src="@drawable/rating" />
 
         <RatingBar
-            android:id="@+id/ratingBar"
+            android:id="@+id/VisitBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -46,7 +45,7 @@
             android:numStars="5" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/VisitText"
             android:layout_width="408dp"
             android:layout_height="62dp"
             android:layout_alignParentStart="true"
@@ -64,6 +63,7 @@
             android:textSize="18sp" />
 
         <Button
+            android:id="@+id/Rate"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -77,7 +77,7 @@
             android:layout_marginEnd="134dp"
             android:layout_marginRight="134dp"
             android:background="@drawable/border2"
-            android:onClick="Thankyou"
+            android:onClick="RateIt"
             android:text="Rate !"
             android:textColor="@android:color/background_light"
             android:textColorLink="@android:color/background_light" />
